# opencl-resizer

./: .gitignore  CMakeLists.txt  Resizer.cpp  main.cpp
OpenCL/: oclManager.cpp  oclManager.h
